[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/oeuf.png" type="Texture" id=1]
[ext_resource path="res://fdoeufs.tres" type="Theme" id=2]
[ext_resource path="res://scripts/game_scene.gd" type="Script" id=3]

[node name="GameScene" type="Node2D"]
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 512.0
margin_bottom = 812.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 512.0
margin_bottom = 812.0

[node name="BuffContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 512.0

[node name="EggCounterLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 512.0
margin_bottom = 72.0
text = "Egg counter"
align = 1

[node name="Egg" type="TextureButton" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 512.0
margin_bottom = 812.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 520.0
margin_right = 520.0
margin_bottom = 812.0

[node name="ItemContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
margin_bottom = 812.0
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Egg" to="." method="_on_Egg_pressed"]
